Fix badge alignment

--- a/src/components/blog/article.module.scss
+++ b/src/components/blog/article.module.scss
@@ -9,6 +9,7 @@
 
   @media (max-width: $screen-lg) {
     font-size: 1rem;
+    display: block;
   }
 
   &:hover {
@@ -17,7 +18,7 @@
 }
 
 .article {
-  margin-bottom: 2rem;
+  margin-bottom: 3.5rem;
 }
 
 .excerpt {
